@@ -470,7 +470,11 @@
       </div>
       <textarea onclick="onTextareaClicked(event);"></textarea>
       <div class="quickReplyFooter" style="overflow: auto" tabindex="-1">
-        <button style="float:right;margin-left:3px;" onclick="onSend(event);">send</button>
+        <button id="send" style="float:right;margin-left:3px;" onclick="onSend(event);">send</button>
+        <button id="sendArchive" style="float:right;margin-left:3px;"
+            onclick="onSend(event, { archive: true });">
+          send &amp; archive
+        </button>
         <button id="save" style="float:right" onclick="onSave(event);">save</button>
         <button id="discard" style="float: left;"
           onclick="if (!$('textarea').val().length || confirm('Are you sure you wish to discard this message ?')) onDiscard();">discard</button>
